--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9800489
+	base = 55e12cb
 	trimbase = 
 	parent = release/dashing/rmw_fastrtps_shared_cpp
-	previous = 
+	previous = 9800489
