--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 890050a
+	base = e59d703
 	trimbase = 
 	parent = vcpkg/dashing/rmw_fastrtps_shared_cpp
-	previous = 
+	previous = 890050a
