--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = d542495
+	base = d78518d
 	trimbase = 
 	parent = release/dashing/rmw_fastrtps_cpp
-	previous = 
+	previous = d542495
