--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 40b8e91
+	base = 4504031
 	trimbase = 
 	parent = vcpkg/dashing/rmw_fastrtps_cpp
-	previous = 
+	previous = 40b8e91
