--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 27f562c
+	base = 60c003b
 	trimbase = 
 	parent = release/dashing/rmw_fastrtps_dynamic_cpp
-	previous = 
+	previous = 27f562c
