--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 6daac4e
+	base = 85458a0
 	trimbase = 
 	parent = vcpkg/dashing/rmw_fastrtps_dynamic_cpp
-	previous = 
+	previous = 6daac4e
